--- a/frontend/public/docs/security/oidc.mdx
+++ b/frontend/public/docs/security/oidc.mdx
@@ -1,1 +1,44 @@
 # OIDC
+
+```yaml
+name: AWS example workflow
+on:
+  push:
+    branches:
+      - develop
+env:
+  ECR_REGISTRY : "<AWS_ECR_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com"
+  ECR_REPO : "<AWS_REPOSITORY_NAME>"
+  AWS_REGION : "<AWS_REGION>"
+# permission can be added at job level or workflow level
+permissions:
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
+jobs:
+  S3PackageUpload:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v4
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: <AWS_ROLE_ARN>
+          role-session-name: <SESSION_NAME> # you what you want.
+          aws-region: ${{ env.AWS_REGION }}
+      
+      - name: Log in to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build the Docker image
+        run: |
+          docker build -t ${{ env.ECR_REPO }} .
+          
+      - name: Tag the Docker image
+        run: |
+          docker tag ${{ env.ECR_REPO }}:latest ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO }}:latest
+          
+      - name: Push the Docker image to ECR
+        run: |
+          docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO}}:latest
+```
