first try responsive

--- a/frontend/public/docs/overview/context.mdx
+++ b/frontend/public/docs/overview/context.mdx
@@ -1,8 +1,10 @@
 # Contexte de cette documentation
+---
 
 ## Objectif
 
 Cette documentation a été créée dans le but de partager mes compétences et connaissances, principalement dans le domaine DevOps. Elle sert également de mémo personnel pour consolider mes apprentissages et expériences.
+
 
 ## Avertissement
 
@@ -12,17 +14,20 @@ Il est important de noter que :
 - Bien que je m'efforce d'être aussi précis que possible, il peut y avoir des erreurs ou des imprécisions.
 - Le contenu est basé sur mes expériences et apprentissages personnels, et peut ne pas toujours refléter les meilleures pratiques de l'industrie.
 
+
 ## Contenu
 
 Vous trouverez ici principalement du contenu lié au DevOps, incluant (mais non limité à) :
 
-- Configuration et gestion de l'infrastructure
-- Intégration et déploiement continus (CI/CD)
-- Conteneurisation et orchestration (Docker, Kubernetes)
+- Configuration et gestion de d'infrastructures Cloud (**AWS**)
+- Intégration et déploiement continus (**CI/CD**, **Github Action**, **GitLab**)
+- Conteneurisation et orchestration (**Docker**, **Kubernetes**)
 - Automatisation et scripting
-- Gestion de la configuration (Ansible, Terraform)
+- Gestion de la configuration (**Terraform**)
 - Monitoring et logging
 - Sécurité dans le DevOps
+
+---
 
 ## Évolution
 
