--- a/frontend/public/docs/overview/context.mdx
+++ b/frontend/public/docs/overview/context.mdx
@@ -37,4 +37,4 @@ Cette documentation est en constante évolution. Je l'enrichis régulièrement a
 
 Bien que cette documentation soit principalement à usage personnel, je la partage dans l'espoir qu'elle puisse être utile à d'autres. Cependant, je vous encourage à toujours vérifier les informations et à les adapter à votre contexte spécifique.
 
-N'hésitez pas à contribuer ou à signaler des erreurs. Voir la page [Contribuer](/contribute) pour plus d'informations.
+N'hésitez pas à contribuer ou à signaler des erreurs. Voir la page [Contribuer](/docs/contribute) pour plus d'informations.
