modit gitlab oidc

--- a/frontend/public/docs/security/oidc.mdx
+++ b/frontend/public/docs/security/oidc.mdx
@@ -75,8 +75,8 @@ jobs:
           aud: https://gitlab.example.com
     before_script:
       - mkdir -p ~/.aws
-      - echo "${GITLAB_OIDC_TOKEN}" > /tmp/web_identity_token
-      - echo -e "[profile oidc]\nrole_arn=${ROLE_ARN}\nweb_identity_token_file=/tmp/web_identity_token" > ~/.aws/config
+      - echo "\${GITLAB_OIDC_TOKEN}" > /tmp/web_identity_token
+      - echo -e "[profile oidc]\nrole_arn=\${ROLE_ARN}\nweb_identity_token_file=/tmp/web_identity_token" > ~/.aws/config
     
   stages:
     - build
